[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'asure-runtime'
version = '1.0.0'

[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.consensus]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-consensus'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.consensus_authorities]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-authorities'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.contract]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-contract'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.council]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-council'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.democracy]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-democracy'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.grandpa]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-grandpa'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.finality-tracker]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-finality-tracker'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.staking]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-staking'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.session]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-session'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.treasury]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-treasury'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.2'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
optional = true
version = '1.0'

[dependencies.serde_derive]
optional = true
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = 'b2e6b08a8f094ee34704905a92cd47df6178901e'

[features]
default = ['std']
std = [
    'parity-codec/std',
    'primitives/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
	"aura/std",
	"balances/std",
	"consensus/std",
	"contract/std",
	"council/std",
	"democracy/std",
	"executive/std",
	"finality-tracker/std",
	"grandpa/std",
	"indices/std",
	"session/std",
	"staking/std",
	"system/std",
	"timestamp/std",
	"treasury/std",
	"sudo/std",
    'version/std',
    'serde_derive',
    'serde',
    'safe-mix/std',
    'consensus-aura/std',
    'offchain-primitives/std',
]
