[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []

[lib]
crate-type = ['cdylib']

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'asure-runtime-wasm'
version = '1.0.0'
[dependencies.asure-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['asure-runtime/std']
